--- a/agenda.html
+++ b/agenda.html
@@ -68,16 +68,211 @@
 
 <main>
 
-<h2 class="text-center resaltado py-3 display-6 fw-bold">Todo lo que necesitas saber sobre las PAU 2026</h2>
+<h1 class="text-center resaltado pt-5 pb-3 display-6 fw-bold">Todo lo que necesitas saber sobre las PAU 2026</h1>
 
-<section id="guia" class="y-5 px-3 px-md-5">
-  <h3 class="py-3 fw-bold">1. Estructura de la PAU 2026: dos fases</h3>
+<section id="guia" class="px-3 px-md-5">
+  <h2 class="text-center resaltado pt-3">Guía del estudiante</h2>
+  <h3 class="py-3 fw-bold">1. Estructura de las pruebas</h3>
 
-  
+  <!-- Fases PAU -->
+  <div class="container">
+    <div class="mx-auto">
+      <div class="row g-5 align-items-center">
 
+        <div class="col-12 col-md-8">
+          <div>
+            <h4 class="fw-bold py-3">Fase Obligatoria</h4>
+            <p>Te examinas de:</p>
+            <ul>
+              <li>
+                <strong>Lengua Castellana y Literatura II</strong>
+              </li>
+              <li>
+                <strong>Valenciano: Lengua y Literatura II</strong>
+              </li>
+              <li>
+                <strong>Lengua Extranjera II:</strong> Alemán / Inglés / Francés / Italiano
+                <ul>
+                  <li>Puedes elegir cualquiera de los 4 aunque no lo hayas cursado.</li>
+                </ul>
+              </li>
+              <li>
+                <strong>Historia de España</strong> o <strong>Historia de la Filosofía</strong>
+                <ul>
+                  <li>A elegir entre las dos.</li>
+                </ul>
+              </li>
+              <li>
+                <strong>Una materia específica obligatoria de modalidad (*)</strong>
+              </li>
+            </ul>
+          </div>
+
+          <div>
+            <p>(*) Qué materia de modalidad te toca (según tu modalidad):</p>
+            <ul>
+              <li><strong>Artes</strong>
+                <ul>
+                  <li><strong>Vía Artes Plásticas, Imagen y Diseño →</strong> Dibujo Artístico II (obligatoria).</li>
+                  <li><strong>Vía Música y Artes Escénicas →</strong> eliges Análisis Musical II o Artes Escénicas II.</li>
+                </ul>
+              </li>
+              <li><strong>Ciencias y Tecnología → </strong>eliges Matemáticas II o Matemáticas Aplicadas a las CCSS II.</li>
+              <li><strong>Humanidades y CCSS → </strong>eliges Latín II o Matemáticas Aplicadas a las CCSS II.</li>
+              <li><strong>General → </strong>Ciencias Generales (obligatoria).</li>
+            </ul>
+          </div>
+
+          <div class="border-top border-primary">
+            <h4 class="fw-bold pt-4 pb-3">Fase Voluntaria</h4>
+            <ul>
+              <li>Si quieres mejorar tu nota de admisión hasta <strong>14 puntos</strong>, puedes presentarte a materias para ponderar.</li>
+              <li>Puedes elegir materias las hayas <strong>cursado o no.</strong></li>
+              <li><strong>Máximo: </strong>3 materias, o 4 si una es segunda lengua extranjera. </li>
+              <li><strong>Todas las asignaturas de la PAU 2026 sirven para ponderaciones en la preinscripción 2026.</strong></li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="col-12 col-md-4 text-center d-none d-md-block">
+          <img src="img/imagen-12.jpg" alt="Imagen decorativa"
+            class="img-fluid rounded-3"/>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Características exámenes -->
+  <h3 class="pt-5 bb-3 fw-bold">2. Características de los exámenes</h3>
+
+  <div class="container">
+    <div class="mx-auto">
+      <div class="row align-items-center">
+        <div class="col-12">
+          <p>Por norma general, los exámenes suelen tener las siguientes características:</p>
+          <ul>
+            <li><strong>Duración: </strong>1 hora y media cada examen</li>
+            <li><strong>Descanso: </strong>45 minutos entre exámenes.</li>
+            <li><strong>Nota:</strong> de 0 a 10, con dos decimales.</li>
+            <li>Cada examen tendrá <strong>una única opción</strong> con preguntas variadas; contestarás según el criterio de optatividad indicado en el propio examen.</li>
+            <li>¡OJO! Hay penalizaciones por <strong>faltas de ortografía.</strong></li>
+            <li>La <strong>nota de acceso a la titulación </strong>se calcula con la nota de acceso a la universidad (40% F. Obligatoria + 60% media Bachillerato) sumado a los dos exámenes ponderados.</li>
+            <li>En FP, la <strong>nota de acceso a la titulación </strong>se calcula con la media de FP sumado a los dos exámenes ponderados.</li>
+            <li>La <strong>media de los exámenes realizados en la Fase Obligatoria</strong> debe ser,como mínimo, un 4.</li>
+            <li>Las notas que ponderan valen para admisión durante los 3 cursos siguientes.</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Decisiones del alumnado -->
+  <h3 class="pt-5 pb-3 fw-bold text-center">¿Qué debes decidir?</h3>
+
+  <div class="container pb-3">
+    <div class="row  align-items-center">
+      <div class="col-12 bg-primary text-white rounded p-4">
+        <ul class="mb-0 fs-5">
+          <li>El idioma de Lengua Extranjera II (recuerda: cursada o no cursada) para la F. Obligatoria. </li>
+          <li>Historia de España o Historia de la Filosofía para la F. Obligatoria.</li>
+          <li>La materia de modalidad para la F. Obligatoria. </li>
+          <li>Si vas a por nota alta: recomendable 2–3 materias para la F. Voluntaria que mejor ponderen. </li>
+        </ul>
+      </div>
+    </div>
+  </div>
 </section>
 
 
+<!-- Calendario PAU 2026 -->
+<section id="calendario" class="section-degradado px-3 px-md-5 my-5">
+  <h2 class="text-center resaltado pt-5 pb-4">Calendario PAU 2026</h2>
+
+  <div class="container my-3 pb-5">
+    <div class="row g-5 align-items-stretch">
+
+      <div class="col-12 col-md-6">
+        <div class="border border-primary rounded-3 h-100 shadow bg-white px-3 pb-3">
+          <h4 class="fw-bold p-4">Convocatoria ordinaria · Junio</h4>
+          <ul>
+            <li><strong>Matriculación:</strong> 18–22 de mayo (hasta las 14:00)</li>
+            <li><strong>Exámenes:</strong> 2, 3 y 4 de junio<br>
+              <small>(posible 5 de junio si hay solapamientos)</small>
+            </li>
+            <li><strong>Corrección:</strong> 5–10 de junio</li>
+            <li><strong>Notas:</strong> 12 de junio (desde las 13:00)</li>
+            <li><strong>Revisiones:</strong> 15–17 de junio (hasta las 14:00)</li>
+            <li><strong>Resolución revisiones:</strong> 19 de junio</li>
+            <li><strong>Ver exámenes:</strong>
+              <ul>
+                <li>Castellón y Valencia: 22–23 de junio</li>
+                <li>Alicante: 25–26 de junio</li>
+              </ul>
+            </li>
+            <li><strong>Visualización:</strong>
+              <ul>
+                <li>Castellón y Valencia: 26 de junio</li>
+                <li>Alicante: 29 de junio</li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="col-12 col-md-6">
+        <div class="border border-primary rounded-3 h-100 shadow bg-white px-3 pb-3">
+          <h4 class="fw-bold p-4">Convocatoria extraordinaria · Julio</h4>
+
+          <ul>
+            <li><strong>Matriculación:</strong> 15–18 de junio (hasta las 14:00)</li>
+            <li><strong>Exámenes:</strong> 30 de junio, 1 y 2 de julio<br>
+              <small>(posible 3 de julio si hay solapamientos)</small>
+            </li>
+            <li><strong>Corrección:</strong> 3–6 de julio</li>
+            <li><strong>Notas:</strong> 7 de julio (desde las 17:00)</li>
+            <li><strong>Revisiones:</strong> 8–10 de julio (hasta las 14:00)</li>
+            <li><strong>Resolución revisiones:</strong> 14 de julio</li>
+            <li><strong>Petición ver exámenes:</strong> 15–16 de julio</li>
+            <li><strong>Visualización de exámenes:</strong> 20 de julio</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+
+<!-- Horario PAU 2026 -->
+<section id="horario" class="px-3 px-md-5 my-5">
+  <h2 class="text-center resaltado pt-5 pb-4">Horario PAU 2026</h2>
+  <p>Puedes revisar a continuación el horario de los exámenes. En caso de <strong>solapamientos</strong>, consulta las especificaciones que se indican en el documento de Conselleria.</p>
+
+  <div class="container pb-5">
+    <img src="img/horario.jpg" class="img-fluid d-sm-none d-md-block" alt="Horario PAU 2026">
+  </div>
+
+  <div class="container">
+    <div class="card border border-primary shadow overflow-hidden rounded-4 mx-auto" style="max-width: 900px;">
+      <div class="row g-0 align-items-stretch">
+
+        <div class="col-md-5">
+          <a href="https://universitats.gva.es/documents/389338055/389339982/Horario_PAU_2026.pdf/50ab62a0-18cf-e860-394b-a665c0fc5998?t=1762169825859" target="_blank" rel="noopener noreferrer" class="d-block h-100 image-link">
+            <img src="img/horario 2.jpg" class="w-100 h-100 object-fit-cover" alt="Página oficial del Ministerio (QEDU)"></a>
+        </div>
+
+        <div class="col-md-7 bg-primary text-white d-flex align-items-center">
+          <div class="p-5">
+            <h3 class="fw-bold mb-2">Horario en PDF</h3>
+            <p class="text-white mb-4">Accede al PDF oficial con el horario y las especificaciones por solapamientos, así como otras cuestiones relacionadas entre éste y las asignaturas escogidas para examinarse.</p>
+            <div class="d-flex flex-wrap gap-2">
+              <a href="https://universitats.gva.es/documents/389338055/389339982/Horario_PAU_2026.pdf/50ab62a0-18cf-e860-394b-a665c0fc5998?t=1762169825859" target="_blank" rel="noopener noreferrer" class="btn btn-outline-light rounded-pill px-4">IR A LA WEB</a>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </div>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
