01/02/2026 - Mejoras en accesibilidad y trabajo en agenda.html

--- a/Técnicas-herramientas.html
+++ b/Técnicas-herramientas.html
@@ -246,7 +246,7 @@
 
             <div class="col-12 col-lg-6">
               <div class="ratio ratio-16x9">
-                <img src="img/imagen 3.jpg" alt="imagen decorativa" class="img-fluid">
+                <img src="img/imagen 3.jpg" alt="" class="img-fluid">
               </div>
             </div>
           </div>
@@ -269,7 +269,7 @@
 
             <div class="col-12 col-lg-6">
               <div class="ratio ratio-16x9">
-                <img src="img/imagen 8.jpg" alt="imagen decorativa" class="img-fluid">
+                <img src="img/imagen 8.jpg" alt="" class="img-fluid">
               </div>
             </div>
           </div>
