--- a/agenda.html
+++ b/agenda.html
@@ -135,7 +135,7 @@
         </div>
 
         <div class="col-12 col-md-4 text-center d-none d-md-block">
-          <img src="img/imagen-12.jpg" alt="Imagen decorativa"
+          <img src="img/imagen-12.jpg" alt=""
             class="img-fluid rounded-3"/>
         </div>
       </div>
@@ -257,7 +257,7 @@
 
         <div class="col-md-5">
           <a href="https://universitats.gva.es/documents/389338055/389339982/Horario_PAU_2026.pdf/50ab62a0-18cf-e860-394b-a665c0fc5998?t=1762169825859" target="_blank" rel="noopener noreferrer" class="d-block h-100 image-link">
-            <img src="img/horario 2.jpg" class="w-100 h-100 object-fit-cover" alt="Página oficial del Ministerio (QEDU)"></a>
+            <img src="img/horario 2.jpg" class="w-100 h-100 object-fit-cover" alt="Recorte del horario PAU 2026"></a>
         </div>
 
         <div class="col-md-7 bg-primary text-white d-flex align-items-center">
