--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
       <div class="row g-0">
         
         <div class="col-md-5">
-          <img src="img/imagen 10.jpg" class="img-fluid w-100 h-100 object-fit-cover" alt="Imagen del recurso">
+          <img src="img/imagen 10.jpg" class="img-fluid w-100 h-100 object-fit-cover" alt="">
         </div>
 
         <div class="col-md-7 bg-primary text-white d-flex align-items-center">
@@ -408,7 +408,7 @@
         </div>
 
         <div class="col-md-5 order-1 order-md-2">
-          <img src="img/imagen 11.jpg" class="img-fluid w-100 h-100 object-fit-cover" alt="Modelos oficiales PAU 2026">
+          <img src="img/imagen 11.jpg" class="img-fluid w-100 h-100 object-fit-cover" alt="">
         </div>
       </div>
     </div>
@@ -426,7 +426,7 @@
 
         <div class="col-md-5">
           <a href="https://www.ciencia.gob.es/qedu.html" target="_blank" rel="noopener noreferrer" class="d-block h-100 image-link">
-            <img src="img/qedu.png" class="w-100 h-100 object-fit-cover" alt="Página oficial del Ministerio (QEDU)"></a>
+            <img src="img/qedu.png" class="w-100 h-100 object-fit-cover" alt="Rercorte de la página oficial del Ministerio (QEDU)"></a>
         </div>
 
         <div class="col-md-7 bg-primary text-white d-flex align-items-center">
@@ -450,7 +450,7 @@
 
         <div class="col-md-5">
           <a href="https://geogrados.gva.es/grados/?idioma=es" target="_blank" rel="noopener noreferrer" class="d-block h-100 image-link">
-            <img src="img/Mapa interactivo CCVV.png" class="w-100 h-100 object-fit-cover" alt="Página oficial de la GVA (mapa interactivo)"></a>
+            <img src="img/Mapa interactivo CCVV.png" class="w-100 h-100 object-fit-cover" alt="Recorte de la página oficial de la GVA (mapa interactivo)"></a>
         </div>
 
         <div class="col-md-7 bg-primary text-white d-flex align-items-center">
