01/02/2026 - Correcciones sencillas de código. Repaso de los href (faltan footer).

--- a/Técnicas-herramientas.html
+++ b/Técnicas-herramientas.html
@@ -22,18 +22,18 @@
 
       <ul class="navbar-nav me-auto">
         <li class="nav-item dropdown">
-          <a class="nav-link active dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Agenda</a>
+          <a class="nav-link active dropdown-toggle" data-bs-toggle="dropdown" href="agenda.html" role="button" aria-haspopup="true" aria-expanded="false">Agenda</a>
           <div class="dropdown-menu">
-            <a class="dropdown-item" href="#">Guía del estudiante</a>
+            <a class="dropdown-item" href="agenda.html#agenda">Guía del estudiante</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Calendario 2026</a>
+            <a class="dropdown-item" href="agenda.html#calendario">Calendario 2026</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Horario 2026</a>
+            <a class="dropdown-item" href="agenda.html#horario">Horario 2026</a>
           </div>
         </li>
 
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Prepárate</a>
+          <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="Técnicas-herramientas.html" role="button" aria-haspopup="true" aria-expanded="false">Prepárate</a>
           <div class="dropdown-menu">
             <a class="dropdown-item" href="#pomodoro">Herramientas para el estudio</a>
             <div class="dropdown-divider"></div>
@@ -82,15 +82,15 @@
           </nav>
           <h3 class="h6 text-uppercase text-body-secondary px-3 mb-2">Relajación y antiestrés</h3>
           <nav class="nav flex-column px-2 mb-2">
-            <a class="nav-link" href="#jacobson">Relajación de Jacobson</a>
+            <a class="nav-link" href="#jacobson">Relajación de <span lang="en">Jacobson</span></a>
             <a class="nav-link" href="#respiracion">Respiración profunda</a>
             <a class="nav-link" href="#visualizacion">Visualización positiva</a>
           </nav>
           <h3 class="h6 text-uppercase text-body-secondary px-3 mb-2">Herramientas de IA</h3>
           <nav class="nav flex-column px-2 mb-2">
             <a class="nav-link" href="#ChatGTP">Prompts para el estudio</a>
-            <a class="nav-link" href="#mymap">MyMap.AI</a>
-            <a class="nav-link" href="#scholarly">Scholarly AI</a>
+            <a class="nav-link" href="#mymap"><span lang="en">MyMap.AI</span></a>
+            <a class="nav-link" href="#scholarly"><span lang="en">Scholarly AI</span></a>
           </nav>
           <h3 class="h6 text-uppercase text-body-secondary px-3 mb-2">Hábitos poderosos</h3>
           <nav class="nav flex-column px-2 mb-2">
@@ -103,7 +103,10 @@
       </aside>
 
       <!-- Estudio -->
+
       <div class="col-12 col-lg-9 col-xl-10">
+      
+        <h1 class="pt-4 resaltado fw-bold">Encuentra tu herramienta o técnica preferida</h1>
 
         <!-- Pomodoro -->
         <section id="pomodoro" class="section-gap px-3 px-lg-4">
@@ -161,10 +164,10 @@
 
         <!-- Jacobson -->
         <section id="jacobson" class="section-gap px-3 px-lg-4">
-          <h2 class="mb-4">Relajación progresiva de Jacobson</h2>
+          <h2 class="mb-4">Relajación progresiva de <span lang="en">Jacobson</span></h2>
           <div class="row align-items-center g-4">
             <div class="col-12 col-lg-6">
-              <p>La relajación progresiva de Jacobson es una técnica que reduce la ansiedad mediante la tensión y relajación consciente de distintos grupos musculares. Ayuda a tomar conciencia del cuerpo y a liberar la tensión acumulada por el estrés académico.</p>
+              <p>La relajación progresiva de <span lang="en">Jacobson</span> es una técnica que reduce la ansiedad mediante la tensión y relajación consciente de distintos grupos musculares. Ayuda a tomar conciencia del cuerpo y a liberar la tensión acumulada por el estrés académico.</p>
               <p>Para aplicarla, tensa durante 5 segundos un grupo muscular (por ejemplo, manos o hombros) y relájalo durante 10–15 segundos antes de pasar al siguiente. Recorre todo el cuerpo de forma ordenada, en un entorno tranquilo.</p>
               <p>Esta técnica está respaldada por estudios en psicología clínica que muestran una reducción significativa del estrés y la activación fisiológica. Es especialmente eficaz antes de exámenes, presentaciones orales o situaciones que generan nervios físicos intensos.</p>
             </div>
@@ -233,10 +236,10 @@
 
         <!-- mymap.ai -->
         <section id="mymap" class="section-gap px-3 px-lg-4">
-          <h2 class="mb-4">MyMap.AI</h2>
+          <h2 class="mb-4"><span lang="en">MyMap.AI</span></h2>
           <div class="row align-items-center g-4">
             <div class="col-12 col-lg-6">
-              <p>AI Study Plan Creator de MyMap.AI es una herramienta de IA que te crea un plan de estudio personalizado en minutos. Tú le dices qué asignaturas tienes, cuándo examinas y cuánto tiempo puedes estudiar, y te lo organiza en sesiones realistas.</p>
+              <p><span lang="en">AI Study Plan Creator</span> de <span lang="en">MyMap.AI</span> es una herramienta de IA que te crea un plan de estudio personalizado en minutos. Tú le dices qué asignaturas tienes, cuándo examinas y cuánto tiempo puedes estudiar, y te lo organiza en sesiones realistas.</p>
               <p>Cómo usarla (pasos rápidos): 1) escribe tus asignaturas y fechas de examen/entrega; 2) indica tus horas disponibles por día; 3) genera el plan y ajusta lo que necesites (más repaso, más práctica, descansos, etc.).</p>
               <p>Funciona bien porque reduce la “carga mental” de planificar (lo que suele hacer que procrastines) y te obliga a dividir objetivos grandes en tareas pequeñas y concretas. Es ideal para organizar semanas de estudio, preparar exámenes con varios temas y mantener constancia sin improvisar cada día.</p>
 
@@ -254,10 +257,10 @@
 
         <!-- scholarly -->
         <section id="scholarly" class="section-gap px-3 px-lg-4">
-          <h2 class="mb-4">Scholarly AI</h2>
+          <h2 class="mb-4"><span lang="en">Scholarly AI</span></h2>
           <div class="row align-items-center g-4">
             <div class="col-12 col-lg-6">
-              <p>El AI Study Schedule Generator de Scholarly crea un horario de estudio optimizado para ti: repartiendo materias, priorizando fechas cercanas y encajándolo en tus horas disponibles. Es útil si te agobias organizándote o si siempre acabas dejando lo más difícil para el final.</p>
+              <p>El <span lang="en">AI Study Schedule Generator</span> de <span lang="en">Scholarly</span> crea un horario de estudio optimizado para ti: repartiendo materias, priorizando fechas cercanas y encajándolo en tus horas disponibles. Es útil si te agobias organizándote o si siempre acabas dejando lo más difícil para el final.</p>
               <p>Cómo llevarlo a cabo: 1) mete tus asignaturas y tareas (y qué tan “pesadas” son); 2) añade tus horas libres y fechas límite; 3) genera el horario y úsalo como guía semanal, reajustándolo si un día fallas (sin drama, se reequilibra).</p>
               <p>Funciona porque convierte “tengo que estudiar muchísimo” en un plan concreto con bloques diarios, lo que mejora la adherencia y reduce la indecisión. Es ideal para semanas previas a exámenes, épocas con muchas entregas y estudiantes que necesitan estructura clara y realista.</p>
 
@@ -380,8 +383,8 @@
       <div class="col-6 col-md-2">
         <h6 class="fw-semibold mb-3">Recursos</h6>
         <ul class="list-unstyled">
-          <li><a href="#modelos" class="footer-link">Modelos PAU</a></li>
-          <li><a href="#calculadora" class="footer-link">Calculadora</a></li>
+          <li><a href="index.html#modelos" class="footer-link">Modelos PAU</a></li>
+          <li><a href="index.html#calculadora" class="footer-link">Calculadora</a></li>
           <li><a href="Técnicas-herramientas.html" class="footer-link">Técnicas y herramientas</a></li>
         </ul>
       </div>
@@ -391,7 +394,7 @@
         <h6 class="fw-semibold mb-3">Información</h6>
         <ul class="list-unstyled">
           <li><a href="#universidades" class="footer-link">Universidades</a></li>
-          <li><a href="#" class="footer-link">Agenda</a></li>
+          <li><a href="agenda.html" class="footer-link">Agenda</a></li>
         </ul>
       </div>
 
