--- a/agenda.html
+++ b/agenda.html
@@ -32,7 +32,7 @@
         </li>
 
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Prepárate</a>
+          <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="Técnicas-herramientas.html" role="button" aria-haspopup="true" aria-expanded="false">Prepárate</a>
           <div class="dropdown-menu">
             <a class="dropdown-item" href="Técnicas-herramientas.html#pomodoro">Herramientas para el estudio</a>
             <div class="dropdown-divider"></div>
@@ -296,8 +296,8 @@
       <div class="col-6 col-md-2">
         <h6 class="fw-semibold mb-3">Recursos</h6>
         <ul class="list-unstyled">
-          <li><a href="#modelos" class="footer-link">Modelos PAU</a></li>
-          <li><a href="#calculadora" class="footer-link">Calculadora</a></li>
+          <li><a href="index.html#modelos" class="footer-link">Modelos PAU</a></li>
+          <li><a href="index.html#calculadora" class="footer-link">Calculadora</a></li>
           <li><a href="Técnicas-herramientas.html" class="footer-link">Técnicas y herramientas</a></li>
         </ul>
       </div>
@@ -306,8 +306,8 @@
       <div class="col-6 col-md-2">
         <h6 class="fw-semibold mb-3">Información</h6>
         <ul class="list-unstyled">
-          <li><a href="#universidades" class="footer-link">Universidades</a></li>
-          <li><a href="#" class="footer-link">Agenda</a></li>
+          <li><a href="index.html#universidades" class="footer-link">Universidades</a></li>
+          <li><a href="agenda.html" class="footer-link">Agenda</a></li>
         </ul>
       </div>
 
