--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </li>
 
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Prepárate</a>
+          <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="Técnicas-herramientas.html" role="button" aria-haspopup="true" aria-expanded="false">Prepárate</a>
           <div class="dropdown-menu">
             <a class="dropdown-item" href="Técnicas-herramientas.html#pomodoro">Herramientas para el estudio</a>
             <div class="dropdown-divider"></div>
@@ -79,7 +79,7 @@
     <div class="row g-4">
 
       <div class="col-12 col-sm-6 col-md-4">
-          <a href="#" class="text-decoration-none text-reset">
+          <a href="agenda.html" class="text-decoration-none text-reset">
           <div class="card mb-3 card-hover rounded-4" style="max-width: 20rem;">
               <div class="card-header">Agenda PAU 2026</div>
               <div class="card-body">
@@ -271,7 +271,7 @@
 
   <!-- Slider -->
   <div class="pau-slider py-4">
-    <div id="pauCarousel" class="carousel slide" data-bs-ride="carousel">
+    <div id="pauCarousel" class="carousel slide" data-bs-ride="false">
       
       <div class="carousel-indicators">
         <button type="button" data-bs-target="#pauCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -323,7 +323,7 @@
                   <h3 class="display-5 fw-bold text-white">IA que te ayuda a estudiar mejor</h3>
                   <p class="lead text-white mb-4">Descubre herramientas gratuitas de inteligencia artificial que te ayudan a concentrarte, organizar el estudio y aprender más en menos tiempo para llegar mejor preparado a la universidad.</p>
                   <div class="d-flex flex-wrap gap-2 justify-content-center">
-                    <a class="btn btn-outline-light rounded-pill px-4" href="Técnicas-herramientas.html#herramientas-ia">
+                    <a class="btn btn-outline-light rounded-pill px-4" href="Técnicas-herramientas.html#ChatGTP">
                       VER IAs
                     </a>
                   </div>
@@ -573,7 +573,7 @@
         <h6 class="fw-semibold mb-3">Información</h6>
         <ul class="list-unstyled">
           <li><a href="#universidades" class="footer-link">Universidades</a></li>
-          <li><a href="#" class="footer-link">Agenda</a></li>
+          <li><a href="agenda.html" class="footer-link">Agenda</a></li>
         </ul>
       </div>
 
