02/02/2026 - btn back-to-top

--- a/index.html
+++ b/index.html
@@ -544,6 +544,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 </main>
 
+<a href="#hero" class="btn-top back-to-top btn m-3 position-fixed bottom-0 end-0 shadow" aria-label="Volver al inicio de la página">Volver al inicio</a>
 
 <!-- Footer (ayroui template) -->
 <footer class="bg-primary text-white pt-4">
