03/02/26 - implementación de js

--- a/agenda.html
+++ b/agenda.html
@@ -72,8 +72,7 @@
 
 <section id="guia" class="px-3 px-md-5">
   <h2 class="text-center resaltado pt-3">Guía del estudiante</h2>
-  <h3 class="py-3 fw-bold">1. Estructura de las pruebas</h3>
-
+  
   <!-- Fases PAU -->
   <div class="container">
     <div class="mx-auto">
@@ -81,6 +80,7 @@
 
         <div class="col-12 col-md-8">
           <div>
+            <h3 class="pt-3 fw-bold">1. Estructura de las pruebas</h3>
             <h4 class="fw-bold py-3">Fase Obligatoria</h4>
             <p>Te examinas de:</p>
             <ul>
@@ -130,13 +130,13 @@
               <li>Puedes elegir materias las hayas <strong>cursado o no.</strong></li>
               <li><strong>Máximo: </strong>3 materias, o 4 si una es segunda lengua extranjera. </li>
               <li><strong>Todas las asignaturas de la PAU 2026 sirven para ponderaciones en la preinscripción 2026.</strong></li>
+              <li>Consulta las <strong><a href="https://universitats.gva.es/documents/389338055/389340585/PONDERACIONES+2025-cast-Actual11-06-25.pdf/efc9ec1e-7f78-139f-c4e7-489ace59504c?t=1749646230456">ponderaciones AQUÍ.</a></strong></li>
             </ul>
           </div>
         </div>
 
         <div class="col-12 col-md-4 text-center d-none d-md-block">
-          <img src="img/imagen-12.jpg" alt=""
-            class="img-fluid rounded-3"/>
+          <img src="img/imagen-12.jpg" alt="" class="img-fluid rounded-3"/>
         </div>
       </div>
     </div>
@@ -161,6 +161,7 @@
             <li>La <strong>media de los exámenes realizados en la Fase Obligatoria</strong> debe ser,como mínimo, un 4.</li>
             <li>Las notas que ponderan valen para admisión durante los 3 cursos siguientes.</li>
           </ul>
+          <p><strong><mark>¡IMPORTANTE!</mark></strong>Recuerda que, si tienes algún tipo de <strong>necesidad educativa</strong>, puedes pedir adaptaciones para los exámenes a principio de. Infórmate a través del Dpto. de Orientación de tu centro educativo a principio de curso.</p>
         </div>
       </div>
     </div>
