--- a/index.html
+++ b/index.html
@@ -154,55 +154,80 @@
   </div>
 </section>
 
-<!-- SECCIÓN 1: CALCULADORA -->
-<section id="calculadora" class="min-vh-100 py-5 px-3 px-md-5 section-degradado">
+<!-- SECCIÓN 1: TELEGRAM -->
+<section id="telegram" class="py-5 px-3 px-md-5 section-degradado">
+  <div class="container text-center py-4">
+    <h2 class="resaltado py-3 display-6 fw-bold">¡Únete a nuestro canal de noticias de Telegram!</h2>
+    <h3 class="py-3 fs-5">Recibirás información actualizada sobre las novedades que van publicándose sobre las PAU. ¡Para que no te pierdas ninguna noticia!</h3>
+
+    <button id="telegramBtn" type="button" class="btn btn-primary rounded-pill px-4 shadow mt-2">
+      Únete a nuestro Telegram
+    </button>
+  </div>
+</section>
+
+<!-- SECCIÓN 2: CALCULADORA -->
+<section id="calculadora" class="min-vh-100 py-5 px-3 px-md-5">
 <h2 class="text-center resaltado py-3 display-6 fw-bold">Calcula tu nota de acceso a un grado universitario</h2>
   <!-- Desde Bach -->
-  <div class="container d-flex align-items-center justify-content-center py-4">
+  <div class="container d-flex py-4">
     <div class="card shadow-sm p-2">
-      <h3 class="h5 mb-3 text-center">Desde estudios de Bachillerato</h3>
-        <div class="text-center text-wrap formula-style">
-          <strong>NOTA ACCESO TITULACIÓN</strong>
-          = (
-          <span class="fw-bold text-primary">MB</span>
-          <input class="form-control form-control-sm d-inline-block text-center nota-input"
-                  type="text" inputmode="decimal" placeholder="0.00"
-                  maxlength="5" pattern="^\d{1,2}([.,]\d{0,2})?$" aria-label="MB">
-          × 0.6
-          +
-          <span class="fw-bold text-primary">MFO</span>
-          <input class="form-control form-control-sm d-inline-block text-center nota-input"
-                  type="text" inputmode="decimal" placeholder="0.00"
-                  maxlength="5" pattern="^\d{1,2}([.,]\d{0,2})?$" aria-label="MFO">
-          × 0.4) + (
-          <span class="fw-bold text-primary">M1</span>
-          <input class="form-control form-control-sm d-inline-block text-center nota-input"
-                  type="text" inputmode="decimal" placeholder="0.00"
-                  maxlength="5" pattern="^\d{1,2}([.,]\d{0,2})?$" aria-label="NE1">
-          ×
-          <span class="fw-bold text-primary">P1</span>
-          <input class="form-control form-control-sm d-inline-block text-center nota-input"
-                  type="text" inputmode="decimal" placeholder="0.00"
-                  maxlength="4" pattern="^0([.,]\d{0,2})?$|^1([.,]0{0,2})?$" aria-label="FP de NE1">
-          ) + (
-          <span class="fw-bold text-primary">M2</span>
-          <input class="form-control form-control-sm d-inline-block text-center nota-input"
-                  type="text" inputmode="decimal" placeholder="0.0"
-                  maxlength="5" pattern="^\d{1,2}([.,]\d{0,2})?$" aria-label="NE2">
-          ×
-          <span class="fw-bold text-primary">P2</span>
-          <input class="form-control form-control-sm d-inline-block text-center nota-input"
-                  type="text" inputmode="decimal" placeholder="0.0"
-                  maxlength="4" pattern="^0([.,]\d{0,2})?$|^1([.,]0{0,2})?$" aria-label="FP de NE2">
-          )
-        </div>
-        <div class="text-center text-wrap formula-style">
-          <span class="fw-bold ms-2">Resultado: </span>
-          <input class="form-control form-control-sm d-inline-block text-center ms-2" type="text" value="--.--" readonly aria-label="Resultado"/>
-        </div>
+      <h3 class="h4 mb-3 text-center">Desde estudios de Bachillerato</h3>
+      <p class="text-center fw-lighter fst-italic">Introduce tus notas con punto (ej., 8.25).</p>
 
+      <!-- Fórmula -->
+      <form id="notaForm" novalidate>
+      <div class="text-center text-wrap formula-style">
+        <strong>NOTA ACCESO TITULACIÓN</strong>
+        = (
+        <span class="fw-bold text-primary">MB</span>
+        <input id="mb" class="form-control form-control-sm d-inline-block text-center nota-input" type="number" inputmode="decimal" min="0" max="10" step="0.01" placeholder="0.00" aria-label="MB">
+        × 0.6 +
+
+        <span class="fw-bold text-primary">MFO</span>
+        <input id="mfo" class="form-control form-control-sm d-inline-block text-center nota-input" type="number" inputmode="decimal" min="0" max="10" step="0.01" placeholder="0.00" aria-label="MFO">
+        × 0.4) + (
+
+        <span class="fw-bold text-primary">M1</span>
+        <input id="m1" class="form-control form-control-sm d-inline-block text-center nota-input" type="number" inputmode="decimal" min="0" max="10" step="0.01" placeholder="0.00" aria-label="M1">
+        ×
+
+        <span class="fw-bold text-primary">P1</span>
+        <select id="p1" class="form-select form-select-sm d-inline-block nota-input" aria-label="P1">
+          <option value="0" selected>0</option>
+          <option value="0.1">0.1</option>
+          <option value="0.2">0.2</option>
+        </select>
+        ) + (
+
+        <span class="fw-bold text-primary">M2</span>
+        <input id="m2" class="form-control form-control-sm d-inline-block text-center nota-input" type="number" min="0" max="10" step="0.01" inputmode="decimal" placeholder="0.0" aria-label="M2">
+        ×
+        <span class="fw-bold text-primary">P2</span>
+        <select id="p2" class="form-select form-select-sm d-inline-block nota-input" aria-label="P2">
+          <option value="0" selected>0</option>
+          <option value="0.1">0.1</option>
+          <option value="0.2">0.2</option>
+        </select>
+        )
+      </div>
+
+      <!-- Botón, resultado y leyenda -->
+      <div class="d-flex justify-content-center mt-3">
+        <button id="calcBtn" type="button" class="btn btn-primary btn-sm rounded-pill">
+          Calcular
+        </button>
+      </div>
+
+      <div class="text-center text-wrap formula-style">
+        <span class="fw-bold ms-2">Resultado: </span>
+        <input id="result" class="form-control form-control-sm d-inline-block text-center ms-2" type="text" placeholder="--.--" readonly aria-label="Resultado"/>
+      </div>
+
+      </form>
     </div>
   </div>
+
   <div class="d-flex justify-content-center pb-4">
     <div class="d-inline-flex flex-wrap gap-3 justify-content-center">
       <span><strong class="text-primary">MB:</strong> Media Bachillerato</span>
@@ -265,8 +290,8 @@
 </section>
 
 
-<!-- SECCIÓN 2: HERRAMIENTAS -->
-<section id="herramientas" class="min-vh-100 py-5 px-3 px-md-5">
+<!-- SECCIÓN 3: HERRAMIENTAS -->
+<section id="herramientas" class="min-vh-100 py-5 px-3 px-md-5 section-degradado">
   <h2 class="text-center resaltado py-3 display-6 fw-bold">No estudies más, estudia mejor</h2>
 
   <!-- Slider -->
@@ -368,8 +393,8 @@
   </div>
 </section>
 
-<!-- SECCIÓN 3: MODELOS DE EXÁMENES -->
-<section id="modelos" class="min-vh-100 py-5 px-3 px-md-5 section-degradado">
+<!-- SECCIÓN 4: MODELOS DE EXÁMENES -->
+<section id="modelos" class="min-vh-100 py-5 px-3 px-md-5">
   <h2 class="text-center resaltado py-3 display-6 fw-bold">Practica con modelos oficiales</h2>
 
   <!-- Card 1 -->
@@ -415,8 +440,8 @@
   </div>
 </section>
 
-<!-- SECCIÓN 4: UNIVERSIDADES -->
-<section id="universidades" class="min-vh-100 py-5 px-3 px-md-5 mb-5">
+<!-- SECCIÓN 5: UNIVERSIDADES -->
+<section id="universidades" class="min-vh-100 py-5 px-3 px-md-5 section-degradado">
   <h2 class="text-center resaltado py-3 display-6 fw-bold">¿Conoces ya la oferta de estudios Universitarios?</h2>
 
   <!-- Card QEDU -->
@@ -538,7 +563,11 @@
   </div>
 </section>
 
+    <!-- Libreria SweetAlert2 -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
+    <!-- main.js -->
+    <script src="js/main.js"></script>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
