--- a/agenda.html
+++ b/agenda.html
@@ -3,7 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PAU a Punto: home</title>
+
+    <link rel="icon" type="image/png" href="img/favicon.png">
+
+    <title>PAU a Punto: agenda</title>
+    <meta name="description" content="Prepárate para la PAU con los mejores recursos y exámenes resueltos en PAU a Punto.">
+
     <link href="https://cdn.jsdelivr.net/npm/bootswatch@5.3.8/dist/pulse/bootstrap.min.css" rel="stylesheet">
     <link href="css/estilos.css" rel="stylesheet">
 </head>
@@ -32,15 +37,15 @@
         </li>
 
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="Técnicas-herramientas.html" role="button" aria-haspopup="true" aria-expanded="false">Prepárate</a>
+          <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="tecnicas.html" role="button" aria-haspopup="true" aria-expanded="false">Prepárate</a>
           <div class="dropdown-menu">
-            <a class="dropdown-item" href="Técnicas-herramientas.html#pomodoro">Herramientas para el estudio</a>
+            <a class="dropdown-item" href="tecnicas.html#pomodoro">Herramientas para el estudio</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="Técnicas-herramientas.html#jacobson">Técnicas de relajación</a>
+            <a class="dropdown-item" href="tecnicas.html#jacobson">Técnicas de relajación</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="Técnicas-herramientas.html#ChatGTP">IA para el estudio</a>
+            <a class="dropdown-item" href="tecnicas.html#ChatGTP">IA para el estudio</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="Técnicas-herramientas.html#alimentación">Hábitos poderosos</a>
+            <a class="dropdown-item" href="tecnicas.html#alimentación">Hábitos poderosos</a>
           </div>
         </li>
 
@@ -59,7 +64,7 @@
       </ul>
 
       <form class="d-flex">
-        <input class="form-control me-sm-2" type="search" placeholder="Busca aquí">
+        <input id="siteSearchForm" class="form-control me-sm-2" type="search" placeholder="Busca aquí">
         <button class="btn btn-secondary my-2 my-sm-0" type="submit">Búsqueda</button>
       </form>
     </div>
@@ -68,7 +73,7 @@
 
 <main>
 
-<h1 class="text-center resaltado pt-5 pb-3 display-6 fw-bold">Todo lo que necesitas saber sobre las PAU 2026</h1>
+<h1 class="text-center resaltado pt-5 pb-3 display-6 fw-bold px-3 px-md-5">Todo lo que necesitas saber sobre las PAU 2026</h1>
 
 <section id="guia" class="px-3 px-md-5">
   <h2 class="text-center resaltado pt-3">Guía del estudiante</h2>
@@ -249,7 +254,7 @@
   <p>Puedes revisar a continuación el horario de los exámenes. En caso de <strong>solapamientos</strong>, consulta las especificaciones que se indican en el documento de Conselleria.</p>
 
   <div class="container pb-5">
-    <img src="img/horario.jpg" class="img-fluid d-sm-none d-md-block" alt="Horario PAU 2026">
+    <img src="img/horario.jpg" class="img-fluid d-none d-md-block" alt="Horario PAU 2026">
   </div>
 
   <div class="container">
@@ -276,10 +281,15 @@
   </div>
 
 
+    <!-- Libreria fusejs -->
+    <script src="https://cdn.jsdelivr.net/npm/fuse.js/dist/fuse.js"></script>
+    <!-- main.js -->
+    <script src="js/main.js"></script>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 </main>
 
-<a href="#guia" class="btn-top back-to-top btn m-3 position-fixed bottom-0 end-0 shadow" aria-label="Volver al inicio de la página">Volver al inicio</a>
+<a href="#guia" class="btn-top back-to-top btn my-5 mx-3 position-fixed bottom-0 end-0 shadow" aria-label="Volver al inicio de la página">Volver al inicio</a>
 
 
 <!-- Footer (ayroui template) -->
@@ -301,7 +311,7 @@
         <ul class="list-unstyled">
           <li><a href="index.html#modelos" class="footer-link">Modelos PAU</a></li>
           <li><a href="index.html#calculadora" class="footer-link">Calculadora</a></li>
-          <li><a href="Técnicas-herramientas.html" class="footer-link">Técnicas y herramientas</a></li>
+          <li><a href="tecnicas.html" class="footer-link">Técnicas y herramientas</a></li>
         </ul>
       </div>
 
@@ -335,7 +345,7 @@
       <div class="d-flex gap-3">
         <a href="#" class="footer-link small">Privacidad</a>
         <a href="#" class="footer-link small">Aviso legal</a>
-        <a href="#" class="footer-link small">Contacto</a>
+        <a href="contacto.html" class="footer-link small">Contacto</a>
       </div>
     </div>
   </div>
