--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="icon" type="image/png" href="img/favicon.png">
+
     <title>PAU a Punto: home</title>
+    <meta name="description" content="Prepárate para la PAU con los mejores recursos y exámenes resueltos en PAU a Punto.">
+
     <link href="https://cdn.jsdelivr.net/npm/bootswatch@5.3.8/dist/pulse/bootstrap.min.css" rel="stylesheet">
     <link href="css/estilos.css" rel="stylesheet">
 </head>
@@ -32,15 +37,15 @@
         </li>
 
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="Técnicas-herramientas.html" role="button" aria-haspopup="true" aria-expanded="false">Prepárate</a>
+          <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="tecnicas.html" role="button" aria-haspopup="true" aria-expanded="false">Prepárate</a>
           <div class="dropdown-menu">
-            <a class="dropdown-item" href="Técnicas-herramientas.html#pomodoro">Herramientas para el estudio</a>
+            <a class="dropdown-item" href="tecnicas.html#pomodoro">Herramientas para el estudio</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="Técnicas-herramientas.html#jacobson">Técnicas de relajación</a>
+            <a class="dropdown-item" href="tecnicas.html#jacobson">Técnicas de relajación</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="Técnicas-herramientas.html#ChatGTP">IA para el estudio</a>
+            <a class="dropdown-item" href="tecnicas.html#ChatGTP">IA para el estudio</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="Técnicas-herramientas.html#alimentación">Hábitos poderosos</a>
+            <a class="dropdown-item" href="tecnicas.html#alimentación">Hábitos poderosos</a>
           </div>
         </li>
 
@@ -59,7 +64,7 @@
       </ul>
 
       <form class="d-flex">
-        <input class="form-control me-sm-2" type="search" placeholder="Busca aquí">
+        <input id="siteSearchForm" class="form-control me-sm-2" type="search" placeholder="Busca aquí">
         <button class="btn btn-secondary my-2 my-sm-0" type="submit">Búsqueda</button>
       </form>
     </div>
@@ -72,11 +77,11 @@
   <h1 class="h1 py-4 text-center">
       <img src="img/logo h1.png" alt="PAU Fácil" class="img-fluid" style="height:64px">
   </h1>
-  <h2 class="text-center py-2">La Web para estudiantes preuniversitarios de la Comunidad Valenciana</h2>
+  <h2 class="text-center py-1">La Web para estudiantes preuniversitarios de la Comunidad Valenciana</h2>
 
   <!-- CARDS -->
-  <div class="container py-4">
-    <div class="row g-4">
+  <div class="container py-5">
+    <div class="row g-5">
 
       <div class="col-12 col-sm-6 col-md-4">
           <a href="agenda.html" class="text-decoration-none text-reset">
@@ -116,7 +121,7 @@
       </div>
 
       <div class="col-12 col-sm-6 col-md-4">
-          <a href="Técnicas-herramientas.html" class="text-decoration-none text-reset">
+          <a href="tecnicas.html" class="text-decoration-none text-reset">
           <div class="card mb-3 card-hover rounded-4" style="max-width: 20rem;">
               <div class="card-header">Prepárate</div>
               <div class="card-body">
@@ -128,7 +133,7 @@
       </div>
 
       <div class="col-12 col-sm-6 col-md-4">
-          <a href="Técnicas-herramientas.html#alimentacion" class="text-decoration-none text-reset">
+          <a href="tecnicas.html#alimentacion" class="text-decoration-none text-reset">
           <div class="card mb-3 card-hover rounded-4" style="max-width: 20rem;">
               <div class="card-header">Hábitos poderosos</div>
               <div class="card-body">
@@ -160,7 +165,7 @@
     <h2 class="resaltado py-3 display-6 fw-bold">¡Únete a nuestro canal de noticias de Telegram!</h2>
     <h3 class="py-3 fs-5">Recibirás información actualizada sobre las novedades que van publicándose sobre las PAU. ¡Para que no te pierdas ninguna noticia!</h3>
 
-    <button id="telegramBtn" type="button" class="btn btn-primary rounded-pill px-4 shadow mt-2">
+    <button id="telegramBtn" type="button" class="btn btn-primary rounded-pill px-4 shadow mt-2 fs-4">
       Únete a nuestro Telegram
     </button>
   </div>
@@ -170,8 +175,8 @@
 <section id="calculadora" class="min-vh-100 py-5 px-3 px-md-5">
 <h2 class="text-center resaltado py-3 display-6 fw-bold">Calcula tu nota de acceso a un grado universitario</h2>
   <!-- Desde Bach -->
-  <div class="container d-flex py-4">
-    <div class="card shadow-sm p-2">
+  <div class="container d-flex justify-content-center py-4">
+    <div class="card shadow-sm p-3">
       <h3 class="h4 mb-3 text-center">Desde estudios de Bachillerato</h3>
       <p class="text-center fw-lighter fst-italic">Introduce tus notas con punto (ej., 8.25).</p>
 
@@ -215,7 +220,7 @@
 
       <!-- Botón, resultado y leyenda -->
       <div class="d-flex justify-content-center mt-3">
-        <button id="calcBtn" type="button" class="btn btn-primary btn-sm rounded-pill">
+        <button id="calcBtn" type="button" class="btn btn-primary btn-sm rounded-pill fs-5">
           Calcular
         </button>
       </div>
@@ -242,8 +247,8 @@
 
   <!-- Desde FP -->
   <!-- Desde Formación Profesional -->
-  <div class="container d-flex py-4">
-    <div class="card shadow-sm p-2">
+  <div class="container d-flex justify-content-center py-4">
+    <div class="card shadow-sm p-3">
       <h3 class="h4 mb-3 text-center">Desde estudios de Formación Profesional</h3>
       <p class="text-center fw-lighter fst-italic">Introduce tus notas con punto (ej., 8.25).</p>
 
@@ -283,7 +288,7 @@
         </div>
 
         <div class="d-flex justify-content-center mt-3">
-          <button id="calcBtnFp" type="button" class="btn btn-primary btn-sm rounded-pill">
+          <button id="calcBtnFp" type="button" class="btn btn-primary btn-sm rounded-pill fs-5">
             Calcular
           </button>
         </div>
@@ -310,7 +315,7 @@
 
 
 <!-- SECCIÓN 3: HERRAMIENTAS -->
-<section id="herramientas" class="min-vh-100 py-5 px-3 px-md-5 section-degradado">
+<section id="herramientas" class="py-5 px-3 px-md-5 section-degradado">
   <h2 class="text-center resaltado py-3 display-6 fw-bold">No estudies más, estudia mejor</h2>
 
   <!-- Slider -->
@@ -335,7 +340,7 @@
                     Pomodoro y la técnica 90/20 te ayudan a estudiar mejor combinando pausas estratégicas y concentración profunda para rendir más en menos tiempo. Descubre cuál se adapta a ti y transforma tu forma de aprender.
                   </p>
                   <div class="d-flex flex-wrap gap-2 justify-content-center">
-                    <a class="btn btn-outline-light rounded-pill px-4" href="Técnicas-herramientas.html#pomodoro">VER HERRAMIENTAS</a>
+                    <a class="btn btn-outline-light rounded-pill px-4" href="tecnicas.html#pomodoro">VER HERRAMIENTAS</a>
                   </div>
                 </div>
               </div>
@@ -351,7 +356,7 @@
                   <h3 class="display-5 fw-bold text-white">Práctica de recuperación</h3>
                   <p class="lead text-white mb-4">Deja de releer y empieza a aprender de verdad: la práctica de recuperación te entrena para recordar, comprender y rendir mejor en los exámenes con menos horas de estudio.</p>
                   <div class="d-flex flex-wrap gap-2 justify-content-center">
-                    <a class="btn btn-outline-light rounded-pill px-4" href="Técnicas-herramientas.html#recuperacion">VER METODOLOGÍA</a>
+                    <a class="btn btn-outline-light rounded-pill px-4" href="tecnicas.html#recuperacion">VER METODOLOGÍA</a>
                   </div>
                 </div>
               </div>
@@ -367,7 +372,7 @@
                   <h3 class="display-5 fw-bold text-white">IA que te ayuda a estudiar mejor</h3>
                   <p class="lead text-white mb-4">Descubre herramientas gratuitas de inteligencia artificial que te ayudan a concentrarte, organizar el estudio y aprender más en menos tiempo para llegar mejor preparado a la universidad.</p>
                   <div class="d-flex flex-wrap gap-2 justify-content-center">
-                    <a class="btn btn-outline-light rounded-pill px-4" href="Técnicas-herramientas.html#ChatGTP">
+                    <a class="btn btn-outline-light rounded-pill px-4" href="tecnicas.html#ChatGTP">
                       VER IAs
                     </a>
                   </div>
@@ -385,7 +390,7 @@
                   <h3 class="display-5 fw-bold text-white">Técnicas de relajación para exámenes</h3>
                   <p class="lead text-white mb-4">Descubre técnicas de relajación eficaces como la respiración profunda, la relajación muscular progresiva o la visualización positiva para controlar los nervios, reducir la ansiedad y rendir mejor en la PAU.</p>
                   <div class="d-flex flex-wrap gap-2 justify-content-center">
-                    <a class="btn btn-outline-light rounded-pill px-4" href="Técnicas-herramientas.html#pomodoro">VER TÉCNICAS</a>
+                    <a class="btn btn-outline-light rounded-pill px-4" href="tecnicas.html#pomodoro">VER TÉCNICAS</a>
                   </div>
                 </div>
               </div>
@@ -404,11 +409,6 @@
 
       </div>
     </div>
-  
-          <div class="text-center d-flex align-items-center">
-            <h3>«No importa lo lento que vayas, siempre que no te detengas.» Confucio</h3>
-          </div>
-
   </div>
 </section>
 
@@ -418,7 +418,7 @@
 
   <!-- Card 1 -->
   <div class="container my-5">
-    <div class="card border-0 shadow overflow-hidden rounded-4 mx-auto" style="max-width: 900px;">
+    <div class="card border-0 shadow overflow-hidden rounded-4 mx-auto" style="max-width: 1200px;">
       <div class="row g-0">
         
         <div class="col-md-5">
@@ -440,7 +440,7 @@
 
   <!-- Card 2 -->
   <div class="container my-5">
-    <div class="card border-0 shadow overflow-hidden rounded-4 mx-auto" style="max-width: 900px;">
+    <div class="card border-0 shadow overflow-hidden rounded-4 mx-auto" style="max-width: 1200px;">
       <div class="row g-0">
         
         <div class="col-md-7 bg-primary text-white d-flex align-items-center order-2 order-md-1">
@@ -465,7 +465,7 @@
 
   <!-- Card QEDU -->
   <div class="container my-5">
-    <div class="card border-0 shadow overflow-hidden rounded-4 mx-auto" style="max-width: 900px;">
+    <div class="card border-0 shadow overflow-hidden rounded-4 mx-auto" style="max-width: 1200px;">
       <div class="row g-0 align-items-stretch">
 
         <div class="col-md-5">
@@ -489,7 +489,7 @@
 
   <!-- Card Mapa GVA -->
    <div class="container my-5">
-    <div class="card border-0 shadow overflow-hidden rounded-4 mx-auto" style="max-width: 900px;">
+    <div class="card border-0 shadow overflow-hidden rounded-4 mx-auto" style="max-width: 1200px;">
       <div class="row g-0 align-items-stretch">
 
         <div class="col-md-5">
@@ -584,15 +584,15 @@
 
     <!-- Libreria SweetAlert2 -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-
+    <!-- Libreria fusejs -->
+    <script src="https://cdn.jsdelivr.net/npm/fuse.js/dist/fuse.js"></script>
     <!-- main.js -->
     <script src="js/main.js"></script>
-
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 </main>
 
-<a href="#hero" class="btn-top back-to-top btn m-3 position-fixed bottom-0 end-0 shadow" aria-label="Volver al inicio de la página">Volver al inicio</a>
+<a href="#hero" class="btn-top back-to-top btn my-5 mx-3 position-fixed bottom-0 end-0 shadow" aria-label="Volver al inicio de la página">Volver al inicio</a>
 
 <!-- Footer (ayroui template) -->
 <footer class="bg-primary text-white pt-4">
@@ -613,7 +613,7 @@
         <ul class="list-unstyled">
           <li><a href="#modelos" class="footer-link">Modelos PAU</a></li>
           <li><a href="#calculadora" class="footer-link">Calculadora</a></li>
-          <li><a href="Técnicas-herramientas.html" class="footer-link">Técnicas y herramientas</a></li>
+          <li><a href="tecnicas.html" class="footer-link">Técnicas y herramientas</a></li>
         </ul>
       </div>
 
@@ -647,7 +647,7 @@
       <div class="d-flex gap-3">
         <a href="#" class="footer-link small">Privacidad</a>
         <a href="#" class="footer-link small">Aviso legal</a>
-        <a href="#" class="footer-link small">Contacto</a>
+        <a href="contacto.html" class="footer-link small">Contacto</a>
       </div>
     </div>
   </div>
