--- a/tecnicas.html
+++ b/tecnicas.html
@@ -3,7 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <title>PAU a Punto: técnicas y herramientas</title>
+  <meta name="description" content="Prepárate para la PAU con los mejores recursos y exámenes resueltos en PAU a Punto.">
+
+  <link rel="icon" type="image/png" href="img/favicon.png">
+
   <link href="https://cdn.jsdelivr.net/npm/bootswatch@5.3.8/dist/pulse/bootstrap.min.css" rel="stylesheet">
   <link href="css/estilos.css" rel="stylesheet">
 </head>
@@ -33,7 +38,7 @@
         </li>
 
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="Técnicas-herramientas.html" role="button" aria-haspopup="true" aria-expanded="false">Prepárate</a>
+          <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="tecnicas.html" role="button" aria-haspopup="true" aria-expanded="false">Prepárate</a>
           <div class="dropdown-menu">
             <a class="dropdown-item" href="#pomodoro">Herramientas para el estudio</a>
             <div class="dropdown-divider"></div>
@@ -60,7 +65,7 @@
       </ul>
 
       <form class="d-flex">
-        <input class="form-control me-sm-2" type="search" placeholder="Busca aquí">
+        <input id="siteSearchForm" class="form-control me-sm-2" type="search" placeholder="Busca aquí">
         <button class="btn btn-secondary my-2 my-sm-0" type="submit">Búsqueda</button>
       </form>
     </div>
@@ -72,32 +77,32 @@
     <div class="row">
     
       <!-- SIDEBAR -->
-      <aside class="col-12 col-lg-3 col-xl-2 d-none d-lg-flex my-4">
+      <aside class="col-12 col-lg-3 col-xl-2 d-none d-lg-flex py-4 section-degradado">
         <div class="sidebar-box w-100 px-2 border rounded-2">
-          <h3 class="h6 text-uppercase text-body-secondary px-3 mb-2">Estudio y organización</h3>
+          <h3 class="h6 text-uppercase pt-3 pb-1 fw-bold text-primary">Estudio y organización</h3>
           <nav class="nav flex-column px-2 mb-2">
-            <a class="nav-link" href="#pomodoro">Pomodoro</a>
-            <a class="nav-link" href="#90-20">Técnica 90/20</a>
-            <a class="nav-link" href="#recuperacion">Práctica de recuperación</a>
+            <a class="aside-link-style nav-link" href="#pomodoro">Pomodoro</a>
+            <a class="aside-link-style nav-link" href="#90-20">Técnica 90/20</a>
+            <a class="aside-link-style nav-link" href="#recuperacion">Práctica de recuperación</a>
           </nav>
-          <h3 class="h6 text-uppercase text-body-secondary px-3 mb-2">Relajación y antiestrés</h3>
+          <h3 class="h6 text-uppercase pt-3 pb-1 fw-bold text-primary">Relajación y antiestrés</h3>
           <nav class="nav flex-column px-2 mb-2">
-            <a class="nav-link" href="#jacobson">Relajación de <span lang="en">Jacobson</span></a>
-            <a class="nav-link" href="#respiracion">Respiración profunda</a>
-            <a class="nav-link" href="#visualizacion">Visualización positiva</a>
+            <a class="aside-link-style nav-link" href="#jacobson">Relajación de <span lang="en">Jacobson</span></a>
+            <a class="aside-link-style nav-link" href="#respiracion">Respiración profunda</a>
+            <a class="aside-link-style nav-link" href="#visualizacion">Visualización positiva</a>
           </nav>
-          <h3 class="h6 text-uppercase text-body-secondary px-3 mb-2">Herramientas de IA</h3>
+          <h3 class="h6 text-uppercase pt-3 pb-1 fw-bold text-primary">Herramientas de IA</h3>
           <nav class="nav flex-column px-2 mb-2">
-            <a class="nav-link" href="#ChatGTP">Prompts para el estudio</a>
-            <a class="nav-link" href="#mymap"><span lang="en">MyMap.AI</span></a>
-            <a class="nav-link" href="#scholarly"><span lang="en">Scholarly AI</span></a>
+            <a class="aside-link-style nav-link" href="#ChatGTP">Prompts para el estudio</a>
+            <a class="aside-link-style nav-link" href="#mymap"><span lang="en">MyMap.AI</span></a>
+            <a class="aside-link-style nav-link" href="#scholarly"><span lang="en">Scholarly AI</span></a>
           </nav>
-          <h3 class="h6 text-uppercase text-body-secondary px-3 mb-2">Hábitos poderosos</h3>
+          <h3 class="h6 text-uppercase pt-3 pb-1 fw-bold text-primary">Hábitos poderosos</h3>
           <nav class="nav flex-column px-2 mb-2">
-            <a class="nav-link" href="#alimentacion">Alimentación</a>
-            <a class="nav-link" href="#deporte">Deporte y ejercicio</a>
-            <a class="nav-link" href="#sueno">Sueño</a>
-            <a class="nav-link" href="#rrss">RRSS</a>
+            <a class="aside-link-style nav-link" href="#alimentacion">Alimentación</a>
+            <a class="aside-link-style nav-link" href="#deporte">Deporte y ejercicio</a>
+            <a class="aside-link-style nav-link" href="#sueno">Sueño</a>
+            <a class="aside-link-style nav-link" href="#rrss">RRSS</a>
           </nav>
         </div>
       </aside>
@@ -106,7 +111,7 @@
 
       <div class="col-12 col-lg-9 col-xl-10">
       
-        <h1 class="pt-4 resaltado fw-bold">Encuentra tu herramienta o técnica preferida</h1>
+        <h1 class="pt-4 text-center resaltado fw-bold">Encuentra tu herramienta o técnica preferida</h1>
 
         <!-- Pomodoro -->
         <section id="pomodoro" class="section-gap px-3 px-lg-4">
@@ -363,10 +368,15 @@
     </div>
   </div>
 
+  <!-- Libreria fusejs -->
+  <script src="https://cdn.jsdelivr.net/npm/fuse.js/dist/fuse.js"></script>
+  <!-- main.js -->
+  <script src="js/main.js"></script>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 </main>
 
-<a href="#pomodoro" class="btn-top back-to-top btn m-3 position-fixed bottom-0 end-0 shadow" aria-label="Volver al inicio de la página">Volver al inicio</a>
+<a href="#pomodoro" class="btn-top back-to-top btn my-5 mx-3 position-fixed bottom-0 end-0 shadow" aria-label="Volver al inicio de la página">Volver al inicio</a>
 
 
 <!-- Footer (ayroui template) -->
@@ -388,7 +398,7 @@
         <ul class="list-unstyled">
           <li><a href="index.html#modelos" class="footer-link">Modelos PAU</a></li>
           <li><a href="index.html#calculadora" class="footer-link">Calculadora</a></li>
-          <li><a href="Técnicas-herramientas.html" class="footer-link">Técnicas y herramientas</a></li>
+          <li><a href="tecnicas.html" class="footer-link">Técnicas y herramientas</a></li>
         </ul>
       </div>
 
@@ -422,7 +432,7 @@
       <div class="d-flex gap-3">
         <a href="#" class="footer-link small">Privacidad</a>
         <a href="#" class="footer-link small">Aviso legal</a>
-        <a href="#" class="footer-link small">Contacto</a>
+        <a href="contacto.html" class="footer-link small">Contacto</a>
       </div>
     </div>
   </div>
