--- a/tecnicas.html
+++ b/tecnicas.html
@@ -64,8 +64,8 @@
         </li>
       </ul>
 
-      <form class="d-flex">
-        <input id="siteSearchForm" class="form-control me-sm-2" type="search" placeholder="Busca aquí">
+      <form id="siteSearchForm" class="d-flex">
+        <input id="siteSearchInput" class="form-control me-sm-2" type="search" placeholder="Busca aquí">
         <button class="btn btn-secondary my-2 my-sm-0" type="submit">Búsqueda</button>
       </form>
     </div>
@@ -367,13 +367,6 @@
       </div>
     </div>
   </div>
-
-  <!-- Libreria fusejs -->
-  <script src="https://cdn.jsdelivr.net/npm/fuse.js/dist/fuse.js"></script>
-  <!-- main.js -->
-  <script src="js/main.js"></script>
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 </main>
 
 <a href="#pomodoro" class="btn-top back-to-top btn my-5 mx-3 position-fixed bottom-0 end-0 shadow" aria-label="Volver al inicio de la página">Volver al inicio</a>
@@ -438,6 +431,30 @@
   </div>
 </footer>
 
+<!-- Modal para resutlados del buscador -->
+<div class="modal fade" id="searchModal" tabindex="-1" aria-hidden="true">
+  <div class="modal-dialog modal-lg modal-dialog-scrollable">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Resultados de búsqueda</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
+      </div>
+      <div class="modal-body">
+        <div class="small text-secondary mb-2" id="searchMeta"></div>
+        <div class="list-group" id="searchResults"></div>
+      </div>
+    </div>
+  </div>
+</div>
+
+  <!-- Libreria SweetAlert2 -->
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<!-- Libreria fusejs -->
+<script src="https://cdn.jsdelivr.net/npm/fuse.js/dist/fuse.js"></script>
+<!-- main.js -->
+<script src="js/main.js"></script>
+<!-- Bootstrap bundle -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 
 </body>
 </html>
