04/02/26 - ampliación contactos (telegram) y correción errores

--- a/agenda.html
+++ b/agenda.html
@@ -135,7 +135,7 @@
                 <li>Puedes elegir materias las hayas <strong>cursado o no.</strong></li>
                 <li><strong>Máximo: </strong>3 materias, o 4 si una es segunda lengua extranjera. </li>
                 <li><strong>Todas las asignaturas de la PAU 2026 sirven para ponderaciones en la preinscripción 2026.</strong></li>
-                <li>Consulta las <strong><a class="ponderaciones-link" href="https://universitats.gva.es/documents/389338055/389340585/PONDERACIONES+2025-cast-Actual11-06-25.pdf/efc9ec1e-7f78-139f-c4e7-489ace59504c?t=1749646230456">ponderaciones AQUÍ.</a></strong></li>
+                <li>Consulta las <strong><a class="ponderaciones-link" href="https://universitats.gva.es/documents/389338055/389340585/PONDERACIONES+2025-cast-Actual11-06-25.pdf/efc9ec1e-7f78-139f-c4e7-489ace59504c?t=1749646230456" target="_blank">ponderaciones AQUÍ.</a></strong></li>
               </ul>
             </div>
           </div>
@@ -170,7 +170,7 @@
               <li>La <strong>media de los exámenes realizados en la Fase Obligatoria</strong> debe ser,como mínimo, un 4.</li>
               <li>Las notas que ponderan valen para admisión durante los 3 cursos siguientes.</li>
             </ul>
-            <p><strong><mark>¡IMPORTANTE!</mark></strong>Recuerda que, si tienes algún tipo de <strong>necesidad educativa</strong>, puedes pedir adaptaciones para los exámenes a principio de. Infórmate a través del Dpto. de Orientación de tu centro educativo a principio de curso.</p>
+            <p><strong><mark>¡IMPORTANTE!</mark></strong> Recuerda que, si tienes algún tipo de <strong>necesidad educativa</strong>, puedes pedir adaptaciones para los exámenes a principio de. Infórmate a través del Dpto. de Orientación de tu centro educativo a principio de curso.</p>
           </div>
         </div>
       </div>
@@ -281,6 +281,18 @@
           </div>
         </div>
       </div>
+    </div>
+  </section>
+
+  <!-- SECCIÓN: TELEGRAM -->
+  <section id="telegram" class="py-5 px-3 px-md-5 section-degradado">
+    <div class="container text-center py-4">
+      <h2 class="resaltado py-3 display-6 fw-bold">¡Únete a nuestro canal de noticias de Telegram!</h2>
+      <h3 class="py-3 fs-5">Recibirás información actualizada sobre las novedades que van publicándose sobre las PAU. ¡Para que no te pierdas ninguna noticia!</h3>
+
+      <button id="telegramBtn" type="button" class="btn btn-primary rounded-pill px-4 shadow mt-2 fs-4">
+        Únete a nuestro Telegram
+      </button>
     </div>
   </section>
 </main>
