--- a/contacto.html
+++ b/contacto.html
@@ -114,6 +114,19 @@
             </div>
         </div>
     </div>
+
+      <!-- SECCIÓN: TELEGRAM -->
+    <section id="telegram" class="pb-5 px-3 px-md-5">
+      <div class="container text-center py-4">
+        <h2 class="resaltado py-3 display-6 fw-bold">¡Únete a nuestro canal de noticias de Telegram!</h2>
+        <h3 class="py-3 fs-5">Recibirás información actualizada sobre las novedades que van publicándose sobre las PAU. ¡Para que no te pierdas ninguna noticia!</h3>
+
+        <button id="telegramBtn" type="button" class="btn btn-primary rounded-pill px-4 shadow mt-2 fs-4">
+          Únete a nuestro Telegram
+        </button>
+      </div>
+    </section>
+
 </main>
 
 <a href="#hero" class="btn-top back-to-top btn my-5 mx-3 position-fixed bottom-0 end-0 shadow" aria-label="Volver al inicio de la página">Volver al inicio</a>
