--- a/index.html
+++ b/index.html
@@ -644,7 +644,7 @@
   </div>
 </footer>
 
-<!-- Modal para resutlados del buscaor -->
+<!-- Modal para resultados del buscaor -->
 <div class="modal fade" id="searchModal" tabindex="-1" aria-hidden="true">
   <div class="modal-dialog modal-lg modal-dialog-scrollable">
     <div class="modal-content">
